--- a/AnimalPG.html
+++ b/AnimalPG.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="UTF-8">
-    <title>Animal Page</title>
+    <title>The Lionhead Rabbit</title>
     
     <link rel="stylesheet" href="animal.css">
     
@@ -39,7 +39,11 @@ In the United States, according to the ARBA Standards, the Lionhead Rabbit is re
     <li><strong>Order: </strong>Lagomorpha</li>
     <li><strong>Family: </strong> Leporidae</li>
   </ul>
+  <hr>
 
+  Goto My <a href="ibeji.html">Ibeji Page</a>
+  
+  <br><br>
   </body>
 
 </html>
