--- a/ibeji.html
+++ b/ibeji.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>Ẹ̀jìrẹ́ ará ìṣokún</title>
     
-    <link rel="stylesheet" href="assets/css/Ẹ̀jìrẹ́-ará-ìṣokún.css">
+    <link rel="stylesheet" href="assets/css/ejire.css">
     
   </head>
 
